home page alignments corrected

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img class="login-gif" src="./assets/img/walk.gif" alt="">
         <form id="loginForm" action="">
            <label for="first">
-                Username
+                User Id
            </label>
             <input type="text"
             id="email"
